--- a/qustions.html
+++ b/qustions.html
@@ -13,10 +13,10 @@
 <body>
     <header>
         <img src="./assets/img/epicode_logo.png" alt="Epicode logo">
-        <div id="timer"></div>
+        <div id="perTimer"></div>
     </header>
     <main id="sezionePrincipale">
-        <div id="domanda"></div>
+        <div id="question"></div>
         <div id="divRisposte"></div>
         <button class="proceed mt-2 ml-1" onclick="domandaSuccessiva()">Next</button>
     </main>
